# html-comic

./: .gitignore  README.md  pubspec.yaml
.github/workflows/: Release.yml
android/app/: build.gradle
ci/: version.info.txt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: commons.dart  cross.dart  main.dart
lib/configs/: android_display_mode.dart  android_secure_flag.dart  auto_clean.dart  auto_full_screen.dart  content_failed_reload_action.dart  export_rename.dart  full_screen_action.dart  keyboard_controller.dart  list_layout.dart  no_animation.dart  pager_action.dart  platform.dart  proxy.dart  reader_direction.dart  reader_slider_position.dart  reader_type.dart  themes.dart  time_offset_hour.dart  version.dart  volume_controller.dart
lib/l10n/: app_en.arb  app_zh.arb
lib/screens/: about_screen.dart  comic_reader_screen.dart  comics_screen.dart  file_photo_view_screen.dart  init_screen.dart  settings_screen.dart  theme_screen.dart
linux/: CMakeLists.txt  my_application.cc
linux/appimage/: AppRun.desktop
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml
native/native.xcodeproj/xcuserdata/niuhuan.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  lib.rs  utils.rs
native/src/database/: mod.rs
native/src/database/active/: comic_view_log.rs  mod.rs
native/src/database/cache/: image_cache.rs  mod.rs  web_cache.rs
native/src/database/properties/: mod.rs  property.rs
native/src/hitomi_client/: client.rs  entities.rs  gg.rs  mod.rs  tests.rs
scripts/: bind.ios.sh
windows/: CMakeLists.txt
(+22 files in other folders)
