[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
async_once = "0.2"
base64 = "0.13"
bytes = "1.1"
chrono = "0.4"
clipboard = "0.5.0"
flutter_rust_bridge = { path = "../../flutter_rust_bridge/frb_rust" }
hex = "0.4"
image = { version = "0", features = ["jpeg", "gif", "webp", "bmp", "png", "jpeg_rayon"] }
itertools = "0.10.3"
lazy_static = "1"
libc = "0.2"
md5 = "0.7"
once_cell = "1"
prost = "0.9"
prost-types = "0.9"
regex = "1.5.5"
reqwest = { version = "0.11", features = ["socks"] }
rsa = "0.5"
rust-crypto = "0"
scraper = "0.13.0"
sea-orm = { version = "0.6", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1.7"
tokio = { version = "1", features = ["full"] }

[target.'cfg(any(target_os = "ios", target_os = "android", target_os = "macos"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
